--- a/index.html
+++ b/index.html
@@ -1,157 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AAA Care Hompage</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AAA Care Homepage</title>
 </head>
-  <body>
-    <table>
-      <thead>
-        <tr>
-          <th>HOME</th>
-          <th>OUR COMMUNITY</th>
-          <th>SERVICES</th>
-          <th>REVIEWS</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Adam's Greenworks</td>
-          <td>14</td>
-          <td>Package Items</td>
-        </tr>
-        <tr>
-          <td>Davie's Burgers</td>
-          <td>2</td>
-          <td>Send Invoice</td>
-        </tr>
-        <tr>
-          <td>Baker's Bike Shop</td>
-          <td>3</td>
-          <td>Send Invoice</td>
-        </tr>
-        <tr>
-          <td>Miss Sally's Southern</td>
-          <td>4</td>
-          <td>Ship</td>
-        </tr>
-        <tr>
-          <td>Summit Resort Rentals</td>
-          <td>4</td>
-          <td>Ship</td>
-        </tr>
-        <tfoot>
-        <tr>
-          <td>Strike Fitness</td>
-          <td>1</td>
-          <td>Enter Order</td>
-        </tr>
-        </tfoot>
-      </tbody>
-    </table>
-  </body>
-</html>
+<body>
 
+  <nav>
+    <ul>
+      <li><a href="#home">HOME</a></li>
+      <li><a href="#community">OUR COMMUNITY</a></li>
+      <li><a href="#services">SERVICES</a></li>
+      <li><a href="#reviews">REVIEWS</a></li>
+      <li><a href="#schedule">SCHEDULE A CALL</a></li>
+    </ul>
+  </nav>
 
+<div id="home">
+  <h1>Home</h1>
+    <p>AAA Care</p>
+</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-<table>
-  <thead>
-    <tr>
-      <th>Quarter</th>
-      <th>Revenue</th>
-      <th>Costs</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>Q1</th>
-      <td>$10M</td>
-      <td>$7.5M</td>
-    </tr>
-    <tr>
-      <th>Q2</th>
-      <td>$12M</td>
-      <td>$5M</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th>Total</th>
-      <td>$22M</td>
-      <td>$12.5M</td>
-    </tr>
-  </tfoot>
-</table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-CSS
-
-
-table, th, td {
-  border: 1px solid black;
-  font-family: Arial, sans-serif;
-  text-align: center;
-}
-
-
-
-
-
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th scope="col">Saturday</th>
-      <th scope="col">Sunday</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">Morning</th>
-      <td rowspan="2">Work</td>
-      <td rowspan="3">Relax</td>
-    </tr>
-    <tr>
-     <th scope="row">Afternoon</th>
-    </tr>
-    <tr>
-      <th scope="row">Evening</th>
-      <td>Dinner</td>
-    </tr>
-  </tbody>
-</table>
+<div>
+  <h2>Our Mission</h2>
+    <p>At AAA Care, our mission is to provide compassionate, personalized, and high-quality support to every individual we serve. We are dedicated to fostering a nurturing environment where dignity, respect, and well-being are at the heart of everything we do. Through our committed team and strong community values, we strive to enhance lives and empower independence—one person, one family, one day at a time.
+</p>
+</div>
 
 </body>
 </html>
