--- a/index.html
+++ b/index.html
@@ -7,26 +7,38 @@
 </head>
 <body>
 
+  <!-- Navigation Menu -->
   <nav>
     <ul>
-      <li><a href="#home">HOME</a></li>
-      <li><a href="#community">OUR COMMUNITY</a></li>
-      <li><a href="#services">SERVICES</a></li>
-      <li><a href="#reviews">REVIEWS</a></li>
-      <li><a href="#schedule">SCHEDULE A CALL</a></li>
+      <li><a href=#home-index.html>HOME</a></li>
+      <li><a href=#Our-community-index.html>OUR COMMUNITY</a></li>
+      <li><a href="services.html">SERVICES</a></li>
+      <li><a href="reviews.html">REVIEWS</a></li>
+      <li><a href="schedule.html">SCHEDULE A CALL</a></li>
     </ul>
   </nav>
 
-<div id="home">
-  <h1>Home</h1>
-    <p>AAA Care</p>
-</div>
+  <!-- Home Section -->
+  <div>
+    <h1>Welcome to AAA Care</h1>
+    <p>
+      AAA Care is dedicated to providing compassionate, personalized support to those in our community.
+    </p>
+  </div>
 
-<div>
-  <h2>Our Mission</h2>
-    <p>At AAA Care, our mission is to provide compassionate, personalized, and high-quality support to every individual we serve. We are dedicated to fostering a nurturing environment where dignity, respect, and well-being are at the heart of everything we do. Through our committed team and strong community values, we strive to enhance lives and empower independence—one person, one family, one day at a time.
-</p>
-</div>
+  <!-- Mission Section -->
+  <div>
+    <h2>Our Mission</h2>
+    <p>
+      At AAA Care, our mission is to provide compassionate, high-quality care tailored to individual needs. 
+      We focus on dignity, respect, and long-term well-being for every person we serve.
+    </p>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <p>2025 AAA Care. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
