--- a/index.html
+++ b/index.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AAA Care Homepage</title>
+  <link href="style.css" rel="stylesheet" />
+  <script src="script.js" defer></script>
 </head>
 <body>
 
   <!-- Navigation Menu -->
   <nav>
     <ul>
-      <li><a href=#home-index.html>HOME</a></li>
-      <li><a href=#Our-community-index.html>OUR COMMUNITY</a></li>
-      <li><a href="services.html">SERVICES</a></li>
-      <li><a href="reviews.html">REVIEWS</a></li>
-      <li><a href="schedule.html">SCHEDULE A CALL</a></li>
+      <li data-tab-target="#home">HOME</li>
+      <li data-tab-target="#services">SERVICES</li>
+      <li data-tab-target="#reviews">REVIEWS</li>
+      <li data-tab-target="#call">SCHEDULE A CALL</li>
     </ul>
   </nav>
 
-  <!-- Home Section -->
-  <div>
-    <h1>Welcome to AAA Care</h1>
-    <p>
-      AAA Care is dedicated to providing compassionate, personalized support to those in our community.
-    </p>
+  <!-- Tab Content -->
+  <div class="tab-content">
+    <div id="home" data-tab-content class="active">
+      <h1>Home</h1>
+      <p>This is the home</p>
+    </div>
+
+    <div id="services" data-tab-content>
+      <h1>Services</h1>
+      <p>These are our services</p>
+    </div>
+
+    <div id="reviews" data-tab-content>
+      <h1>Reviews</h1>
+      <p>These are our reviews</p>
+    </div>
+
+    <div id="call" data-tab-content>
+      <h1>Schedule</h1>
+      <p>Schedule a call with us today</p>
+    </div>
   </div>
 
   <!-- Mission Section -->
@@ -37,7 +53,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>2025 AAA Care. All rights reserved.</p>
+    <p>&copy; 2025 AAA Care. All rights reserved.</p>
   </footer>
 
 </body>
